--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@ https://templatemo.com/tm-587-tiya-golf-club
 
                         <div class="col-lg-5 col-12">
                             <form action="#" method="post" class="custom-form contact-form" role="form">
-                                <h2 class="mb-4 pb-2">Contact Tiya</h2>
+                                <h2 class="mb-4 pb-2">Entre em contacto conosco</h2>
 
                                 <div class="row">
                                     <div class="col-lg-6 col-md-6 col-12">
@@ -592,7 +592,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                                             <label for="floatingTextarea" style="color:lightgray" >Mensagem</label>
                                         </div>
 
-                                        <button type="submit" class="form-control">Submit Form</button>
+                                        <button type="submit" class="form-control">Submeter</button>
                                     </div>
                                 </div>
                             </form>
@@ -602,6 +602,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                             <div class="contact-info mt-5">
                                 <div class="contact-info-item">
                                     <div class="contact-info-body">
+                                        <h3 class="text-white">Localização</h3>
                                         <strong>Rua das Flores, 123, 2º Andar</strong>
                                         <strong>1200-195 Lisboa, Portugal</strong>
 
@@ -638,17 +639,17 @@ https://templatemo.com/tm-587-tiya-golf-club
                 <div class="row">
 
                     <div class="col-lg-6 col-12 me-auto mb-5 mb-lg-0">
-                        <a class="navbar-brand d-flex align-items-center" href="index.html">
+                        <!-- <a class="navbar-brand d-flex align-items-center" href="index.html">
                             <img src="images/logo.png" class="navbar-brand-image img-fluid" alt="">
                             <span class="navbar-brand-text">
                                 Tiya
                                 <small>Golf Club</small>
                             </span>
-                        </a>
+                        </a> -->
                     </div>
 
                     <div class="col-lg-3 col-12">
-                        <h5 class="site-footer-title mb-4">Junta-te a nós</h5>
+                        <h5 class="site-footer-title mb-4">Contactos</h5>
 
                         <p class="d-flex border-bottom pb-3 mb-3 me-lg-3">
                             <span>Contacto nacional</span>
@@ -664,18 +665,11 @@ https://templatemo.com/tm-587-tiya-golf-club
                     </div>
 
                         <div class="col-lg-2 col-12 ms-auto">
-                            <ul class="social-icon mt-lg-5 mt-3 mb-4">
+                            <p>Encontra-nos nas nossas redes</p>
+                            <ul class="social-icon mt-0 mb-4">
                                 <li class="social-icon-item">
                                     <a href="#" class="social-icon-link bi-instagram"></a>
                                 </li>
-
-                                <li class="social-icon-item">
-                                    <a href="#" class="social-icon-link bi-twitter"></a>
-                                </li>
-
-                                <!-- <li class="social-icon-item">
-                                    <a href="#" class="social-icon-link bi-whatsapp"></a>
-                                </li> -->
 
                                 <li class="social-icon-item">
                                     <a href="#" class="social-icon-link bi-facebook"></a>
@@ -683,6 +677,22 @@ https://templatemo.com/tm-587-tiya-golf-club
 
                                 <li class="social-icon-item">
                                     <a href="#" class="social-icon-link bi-tiktok"></a>
+                                </li>
+
+                                <!-- <li class="social-icon-item">
+                                    <a href="#" class="social-icon-link bi-twitter"></a>
+                                </li> -->
+
+                                <!-- <li class="social-icon-item">
+                                    <a href="#" class="social-icon-link bi-whatsapp"></a>
+                                </li> -->
+
+                                <li class="social-icon-item">
+                                    <a href="#" class="social-icon-link bi-linkedin"></a>
+                                </li>
+
+                                <li class="social-icon-item">
+                                    <a href="#" class="social-icon-link bi-youtube"></a>
                                 </li>
                             </ul>
                             <!--<p class="copyright-text">Design: <a rel="nofollow" href="https://templatemo.com" target="_blank">TemplateMo</a></p>-->
