--- a/index.html
+++ b/index.html
@@ -40,13 +40,12 @@ https://templatemo.com/tm-587-tiya-golf-club
                     <a class="navbar-brand d-flex align-items-center" href="index.html">
                         <img src="images/logo.png" class="navbar-brand-image img-fluid" alt="Tiya Golf Club">
                         <span class="navbar-brand-text">
-                            Unagi
-                            <small>Agência de Comunicação</small>
+                            UNAGI
                         </span>
                     </a>
 
                     <div class="d-lg-none ms-auto me-3">
-                        <a class="btn custom-btn custom-border-btn" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">Member Login</a>
+                        <a class="btn custom-btn custom-border-btn" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">Login</a>
                     </div>
     
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,26 +55,26 @@ https://templatemo.com/tm-587-tiya-golf-club
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-lg-auto">
                             <li class="nav-item">
-                                <a class="nav-link click-scroll" href="#section_1">Home</a>
+                                <a class="nav-link click-scroll" href="#section_1">Início</a>
                             </li>
     
                             <li class="nav-item">
-                                <a class="nav-link click-scroll" href="#section_2">About</a>
+                                <a class="nav-link click-scroll" href="#section_2">Serviços</a>
                             </li>
 
-                            <li class="nav-item">
+                            <!-- <li class="nav-item">
                                 <a class="nav-link click-scroll" href="#section_3">Membership</a>
+                            </li> -->
+
+                            <li class="nav-item">
+                                <a class="nav-link click-scroll" href="#section_4">Sobre</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link click-scroll" href="#section_4">Events</a>
+                                <a class="nav-link click-scroll" href="#section_5">Contactos</a>
                             </li>
 
-                            <li class="nav-item">
-                                <a class="nav-link click-scroll" href="#section_5">Contact Us</a>
-                            </li>
-
-                            <li class="nav-item dropdown">
+                            <!-- <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarLightDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Pages</a>
 
                                 <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarLightDropdownMenuLink">
@@ -83,11 +82,11 @@ https://templatemo.com/tm-587-tiya-golf-club
 
                                     <li><a class="dropdown-item" href="event-detail.html">Event Detail</a></li>
                                 </ul>
-                            </li>
+                            </li> -->
                         </ul>
 
                         <div class="d-none d-lg-block ms-lg-3">
-                            <a class="btn custom-btn custom-border-btn" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">Member Login</a>
+                            <a class="btn custom-btn custom-border-btn" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">Login</a>
                         </div>
                     </div>
                 </div>
@@ -105,7 +104,7 @@ https://templatemo.com/tm-587-tiya-golf-club
 
                         <div class="member-login-form-body">
                             <div class="mb-4">
-                                <label class="form-label mb-2" for="member-login-number">Membership No.</label>
+                                <label class="form-label mb-2" for="member-login-number">Utilizador</label>
 
                                 <input type="text" name="member-login-number" id="member-login-number" class="form-control" placeholder="11002560" required>
                             </div>
@@ -129,14 +128,14 @@ https://templatemo.com/tm-587-tiya-golf-club
                             </div>
 
                             <div class="text-center my-4">
-                                <a href="#">Forgotten password?</a>
+                                <a href="#">Esqueceu-se da password?</a>
                             </div>
                         </div>
                     </form>
 
                     <div class="mt-auto mb-5">
                         <p>
-                            <strong class="text-white me-3">Any Questions?</strong>
+                            <strong class="text-white me-3">Alguma Questão?</strong>
 
                             <a href="tel: 010-020-0340" class="contact-link">
                             	010-020-0340
@@ -159,21 +158,21 @@ https://templatemo.com/tm-587-tiya-golf-club
                     <div class="row">
 
                         <div class="col-lg-6 col-12 mb-5 mb-lg-0">
-                            <h2 class="text-white">Welcome to the club</h2>
+                            <h2 class="text-white">Bem-vindo à Agência de Comunicação</h2>
 
-                            <h1 class="cd-headline rotate-1 text-white mb-4 pb-2">
+                            <h2 class="text-white">UNAGI</h2>
+
+                            <!-- <h1 class="cd-headline rotate-1 text-white mb-4 pb-2">
                                 <span>Tiya is</span>
                                 <span class="cd-words-wrapper">
                                     <b class="is-visible">Modern</b>
                                     <b>Creative</b>
                                     <b>Lifestyle</b>
                                 </span>
-                            </h1>
+                            </h1> -->
 
                             <div class="custom-btn-group">
-                                <a href="#section_2" class="btn custom-btn smoothscroll me-3">Our Story</a>
-
-                                <a href="#section_3" class="link smoothscroll">Become a member</a>
+                                <a href="#section_4" class="btn custom-btn smoothscroll me-3">A nossa História</a>
                             </div>
                         </div>
 
@@ -195,15 +194,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                     <div class="row">
 
                         <div class="col-lg-12 col-12 text-center">
-                            <h2 class="mb-lg-5 mb-4">About Tiya</h2>
-                        </div>
-
-                        <div class="col-lg-5 col-12 me-auto mb-4 mb-lg-0">
-                            <h3 class="mb-3">Tiya Club History</h3>
-
-                            <p><strong>Since 1984</strong>, Tiya is ranked #8 in the top 10 golf courses in the world. Tiya is Bootstrap 5 HTML CSS template for golf clubs. Anyone can modify and use this layout for commercial purposes.</p>
-
-                            <p>Tiya Golf Club is 100% free CSS template provided by TemplateMo website. Please tell your friends about our website. Thank you for visiting.</p>
+                            <h2 class="mb-lg-5 mb-4">Os nossos Serviços</h2>
                         </div>
 
                         <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0 mb-md-0">
@@ -258,38 +249,7 @@ https://templatemo.com/tm-587-tiya-golf-club
             </section>
 
 
-            <section class="section-bg-image">
-                <svg viewBox="0 0 1265 144" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path fill="rgba(255, 255, 255, 1)" d="M 0 40 C 164 40 164 20 328 20 L 328 20 L 328 0 L 0 0 Z" stroke-width="0"></path> <path fill="rgba(255, 255, 255, 1)" d="M 327 20 C 445.5 20 445.5 89 564 89 L 564 89 L 564 0 L 327 0 Z" stroke-width="0"></path> <path fill="rgba(255, 255, 255, 1)" d="M 563 89 C 724.5 89 724.5 48 886 48 L 886 48 L 886 0 L 563 0 Z" stroke-width="0"></path><path fill="rgba(255, 255, 255, 1)" d="M 885 48 C 1006.5 48 1006.5 67 1128 67 L 1128 67 L 1128 0 L 885 0 Z" stroke-width="0"></path><path fill="rgba(255, 255, 255, 1)" d="M 1127 67 C 1196 67 1196 0 1265 0 L 1265 0 L 1265 0 L 1127 0 Z" stroke-width="0"></path></svg>
-
-                <div class="container">
-                    <div class="row">
-
-                        <div class="col-lg-6 col-12">
-                            <div class="section-bg-image-block">
-                                <h2 class="mb-lg-3">Get our newsletter</h2>
-
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor ut labore et dolore.</p>
-
-                                <form action="#" method="get" class="custom-form mt-lg-4 mt-2" role="form">
-                                    <div class="input-group input-group-lg">
-                                        <span class="input-group-text bi-envelope" id="basic-addon1"></span>
-
-                                        <input type="email" name="email" id="email" pattern="[^ @]*@[^ @]*" class="form-control" placeholder="Email address" required="">
-
-                                        <button type="submit" class="form-control">Subscribe</button>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
-                <svg viewBox="0 0 1265 144" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path fill="rgba(255, 255, 255, 1)" d="M 0 40 C 164 40 164 20 328 20 L 328 20 L 328 0 L 0 0 Z" stroke-width="0"></path> <path fill="rgba(255, 255, 255, 1)" d="M 327 20 C 445.5 20 445.5 89 564 89 L 564 89 L 564 0 L 327 0 Z" stroke-width="0"></path> <path fill="rgba(255, 255, 255, 1)" d="M 563 89 C 724.5 89 724.5 48 886 48 L 886 48 L 886 0 L 563 0 Z" stroke-width="0"></path><path fill="rgba(255, 255, 255, 1)" d="M 885 48 C 1006.5 48 1006.5 67 1128 67 L 1128 67 L 1128 0 L 885 0 Z" stroke-width="0"></path><path fill="rgba(255, 255, 255, 1)" d="M 1127 67 C 1196 67 1196 0 1265 0 L 1265 0 L 1265 0 L 1127 0 Z" stroke-width="0"></path></svg>
-            </section>
-
-
-            <section class="membership-section section-padding" id="section_3">
+            <!-- <section class="membership-section section-padding" id="section_3">
                 <div class="container">
                     <div class="row">
 
@@ -446,7 +406,7 @@ https://templatemo.com/tm-587-tiya-golf-club
 
                     </div>
                 </div>
-            </section>
+            </section> -->
 
 
             <section class="events-section section-bg section-padding" id="section_4">
