Added services descriptions

--- a/index.html
+++ b/index.html
@@ -191,55 +191,61 @@ https://templatemo.com/tm-587-tiya-golf-club
 
             <section class="about-section section-padding" id="section_2">
                 <div class="container">
-                    <div class="row">
+                    <div class="row justify-content-center">
 
-                        <div class="col-lg-12 col-12 text-center">
+                        <div class="col-12 text-center">
                             <h2 class="mb-lg-5 mb-4">Os nossos Serviços</h2>
                         </div>
 
-                        <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0 mb-md-0">
-                            <div class="member-block">
-                                <div class="member-block-image-wrap">
-                                    <img src="images/members/portrait-young-handsome-businessman-wearing-suit-standing-with-crossed-arms-with-isolated-studio-white-background.jpg" class="member-block-image img-fluid" alt="">
+                        <div class="col-lg-9 col-md-12">
+                            <div class="row justify-content-around">
+                                <div class="col-md-5">
+                                    <div class="member-block">
+                                        <div class="member-block-image-wrap">
+                                            <img src="images/members/portrait-young-handsome-businessman-wearing-suit-standing-with-crossed-arms-with-isolated-studio-white-background.jpg" class="member-block-image img-fluid" alt="">
 
-                                    <ul class="social-icon">
-                                        <li class="social-icon-item">
-                                            <a href="#" class="social-icon-link bi-twitter"></a>
-                                        </li>
-
-                                        <li class="social-icon-item">
-                                            <a href="#" class="social-icon-link bi-whatsapp"></a>
-                                        </li>
-                                    </ul>
+                                            <h2>Assessoria de Imprensa</h2>
+                                            <p>Desenvolvemos comunicados de imprensa, organizamos conferências de imprensa e estabelecemos uma relação sólida com jornalistas para garantir que as suas novidades sejam divulgadas da melhor forma possível.</p>
+                                        </div>
+                                    </div>
                                 </div>
 
-                                <div class="member-block-info d-flex align-items-center">
-                                    <h4>Michael</h4>
+                                <div class="col-md-5">
+                                    <div class="member-block">
+                                        <div class="member-block-image-wrap">
+                                            <img src="images/members/successful-asian-lady-boss-red-blazer-holding-clipboard-with-documens-pen-working-looking-happy-white-background.jpg" class="member-block-image img-fluid" alt="">
 
-                                    <p class="ms-auto">Founder</p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-3 col-md-6 col-12">
-                            <div class="member-block">
-                                <div class="member-block-image-wrap">
-                                    <img src="images/members/successful-asian-lady-boss-red-blazer-holding-clipboard-with-documens-pen-working-looking-happy-white-background.jpg" class="member-block-image img-fluid" alt="">
-
-                                    <ul class="social-icon">
-                                        <li class="social-icon-item">
-                                            <a href="#" class="social-icon-link bi-linkedin"></a>
-                                        </li>
-                                        <li class="social-icon-item">
-                                            <a href="#" class="social-icon-link bi-twitter"></a>
-                                        </li>
-                                    </ul>
+                                            <h2>Gestão de Redes Sociais</h2>
+                                            <p>Criamos estratégias personalizadas para cada plataforma, produzimos conteúdos envolventes e gerimos as suas contas para aumentar o envolvimento, seguidores e visibilidade da sua marca.</p>
+                                        </div>
+                                    </div>
                                 </div>
 
-                                <div class="member-block-info d-flex align-items-center">
-                                    <h4>Sandy</h4>
+                                <div class="col-md-5">
+                                    <div class="member-block">
+                                        <div class="member-block-image-wrap">
+                                            <img src="images/members/successful-asian-lady-boss-red-blazer-holding-clipboard-with-documens-pen-working-looking-happy-white-background.jpg" class="member-block-image img-fluid" alt="">
 
-                                    <p class="ms-auto">Co-Founder</p>
+                                            
+                                            <h2>Marketing de Conteúdos</h2>
+                                            <p>Desenvolvemos blogs, artigos, e-books, newsletters e outros materiais que atraem e fidelizam clientes, posicionando a sua empresa comoreferência no mercado.</p>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-5">
+                                    <div class="member-block">
+                                        <div class="member-block-image-wrap">
+                                            <img src="images/members/successful-asian-lady-boss-red-blazer-holding-clipboard-with-documens-pen-working-looking-happy-white-background.jpg" class="member-block-image img-fluid" alt="">
+
+                                            <h2>Criação de Identidade Visual</h2>
+                                            <p>A primeira impressão é crucial.
+                                                Desenvolvemos identidades visuais impactantes e coerentes com os valores da
+                                                sua marca. Desde acriação de logótipos até à definição de paletas de cores e
+                                                tipografias, garantimos que a sua empresa tem uma presença visual marcante e
+                                                memorável</p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
