--- a/index.html
+++ b/index.html
@@ -521,8 +521,8 @@ https://templatemo.com/tm-587-tiya-golf-club
 
 
             <section class="contact-section section-padding d-flex align-items-center justify-content-center" id="section_5">
-                <div class="container">
-                    <div class="row justify-content-around">
+                <div class="container" style="border-radius: 4rem; border-style: solid; border-color: #3D405B;">
+                    <div class="row justify-content-around mt-4">
                         
                         <div class="col-lg-3 col-12 align-self-center">
                             <h3 class="mb-4 pb-2 text-center">Contacta-nos</h3>
@@ -551,7 +551,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                                             <textarea class="form-control" id="message" name="message" placeholder="Describe message here"></textarea>
                                             <label for="floatingTextarea" style="color:lightgray">Mensagem</label>
                                         </div>
-                                        <button type="submit" class="form-control">Submeter</button>
+                                        <button style="color: white;" type="button" class="btn custom-btn mb-4 w-100">Submeter</button>
                                     </div>
                                 </div>
                             </form>
@@ -607,7 +607,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                         </a>
                     </div>-->
 
-                    <div class="col-lg-4 col-12 me-auto mb-5 mb-lg-0"> <!-- col-lg-3 col-12 -->
+                    <div class="col-lg-4 col-12 me-auto mb-5 mb-lg-0 align-self-center"> <!-- col-lg-3 col-12 -->
                         <h5 class="site-footer-title mb-4">Contactos</h5>
 
                         <p class="d-flex border-bottom pb-3 mb-3 me-lg-3">
@@ -621,11 +621,9 @@ https://templatemo.com/tm-587-tiya-golf-club
                         </p>
                         <br>
                         <!--<p class="copyright-text">Copyright © 2048 Tiya Golf Club</p>-->
-                    </div>
 
-                    <div class="col-lg-4 col-12"> <!--ol-lg-2 col-12 ms-auto-->
                         <p class="text-center">Encontra-nos nas nossas redes</p>
-                        <ul class="social-icon mt-0 mb-4 text-center">
+                        <ul class="social-icon mt-0 text-center">
                             <li class="social-icon-item">
                                 <a href="#" class="social-icon-link bi-instagram"></a>
                             </li>
@@ -655,12 +653,34 @@ https://templatemo.com/tm-587-tiya-golf-club
                             </li>
                         </ul>
                         <!--<p class="copyright-text">Design: <a rel="nofollow" href="https://templatemo.com" target="_blank">TemplateMo</a></p>-->
-                        
                     </div>
 
-                    <div class="col-lg-4 col-12"> 
+                    <div class="col-lg-4 col-12"> <!--ol-lg-2 col-12 ms-auto-->                        
+                        <form action="#" method="post" class="custom-form contact-form mx-auto" role="form">
+                            <h4 class="pt-4 mb-4 pb-2 text-center">Subscreva à nossa Newsletter</h4>
+                            <div class="row justify-content-center">
+                                <div class="col-8">
+                                    <div class="form-floating">
+                                        <input type="text" name="full-name" id="full-name" class="form-control" placeholder="Full Name" required="">
+                                        <label for="floatingInput" style="color:lightgray">Nome Completo</label>
+                                    </div>
+                                </div>
+                                <div class="col-8">
+                                    <div class="form-floating">
+                                        <input type="email" name="email" id="email" pattern="[^ @]*@[^ @]*" class="form-control" placeholder="Email address" required="">
+                                        <label for="floatingInput" style="color:lightgray">Endereço Email</label>
+                                    </div>
+                                </div>
+                                <button style="color: white; width: 40%;" type="button" class="btn custom-btn mb-4">Subscrever</button>
+                            </div>
+                        </form>
+                    </div>
+
+
+
+                    <div class="col-lg-4 col-12 align-self-center"> 
                         <div class="contact-info mt-5">
-                            <div class="contact-info-item">
+                            <div class="contact-info-item" style="width: 300px;">
                                 <div class="contact-info-body">
                                     <h3 class="text-white">Localização</h3>
                                     <strong>Rua das Flores, 123, 2º Andar</strong>
