--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                                             <textarea class="form-control" id="message" name="message" placeholder="Describe message here"></textarea>
                                             <label for="floatingTextarea" style="color:lightgray">Mensagem</label>
                                         </div>
-                                        <button style="color: white;" type="button" class="btn custom-btn mb-4 w-100">Submeter</button>
+                                        <button style="color: white;" type="button" class="btn custom-btn mb-4 w-100">Enviar</button>
                                     </div>
                                 </div>
                             </form>
@@ -622,7 +622,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                         <br>
                         <!--<p class="copyright-text">Copyright © 2048 Tiya Golf Club</p>-->
 
-                        <p class="text-center">Encontra-nos nas nossas redes</p>
+                        <p class="text-center">Encontra-nos nas nossas redes sociais</p>
                         <ul class="social-icon mt-0 text-center">
                             <li class="social-icon-item">
                                 <a href="#" class="social-icon-link bi-instagram"></a>
