Added testimonial carousel

--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@ https://templatemo.com/tm-587-tiya-golf-club
                 <div class="container">
                     <div class="row">
 
-                        <div class="col-lg-6 col-12 mb-5 mb-lg-0">
-                            <h2 class="text-white">Bem-vindo à Agência de Comunicação</h2>
+                        <div class="col-lg-6 col-12 mb-5 mb-lg-0 text-center">
+                            <h3 class="text-white">Bem-vindo à Agência de Comunicação</h3>
 
-                            <h2 class="text-white">UNAGI</h2>
+                            <h2 class="text-white fw-bold">UNAGI</h2>
 
                             <!-- <h1 class="cd-headline rotate-1 text-white mb-4 pb-2">
                                 <span>Tiya is</span>
@@ -171,8 +171,8 @@ https://templatemo.com/tm-587-tiya-golf-club
                                 </span>
                             </h1> -->
 
-                            <div class="custom-btn-group">
-                                <a href="#section_4" class="btn custom-btn smoothscroll me-3">A nossa História</a>
+                            <div class="custom-btn-group p-3">
+                                <a href="#section_4" class="btn custom-btn smoothscroll m-3 text-uppercase fw-bold">A nossa História</a>
                             </div>
                         </div>
 
@@ -199,10 +199,10 @@ https://templatemo.com/tm-587-tiya-golf-club
 
                         <div class="col-lg-9 col-md-12">
                             <div class="row justify-content-around">
-                                <div class="col-md-5">
+                                <div class="col-md-5 m-3">
                                     <div class="member-block">
                                         <div class="member-block-image-wrap">
-                                            <img src="images/members/portrait-young-handsome-businessman-wearing-suit-standing-with-crossed-arms-with-isolated-studio-white-background.jpg" class="member-block-image img-fluid" alt="">
+                                            <img src="images/servicos/assessoria de imprensa_.jpg" class="rounded-4 w-100 object-fit-cover" alt="Assessoria de imprensa" style="max-width: 400px; max-height: 200px;">
 
                                             <h2>Assessoria de Imprensa</h2>
                                             <p>Desenvolvemos comunicados de imprensa, organizamos conferências de imprensa e estabelecemos uma relação sólida com jornalistas para garantir que as suas novidades sejam divulgadas da melhor forma possível.</p>
@@ -210,10 +210,10 @@ https://templatemo.com/tm-587-tiya-golf-club
                                     </div>
                                 </div>
 
-                                <div class="col-md-5">
+                                <div class="col-md-5 m-3">
                                     <div class="member-block">
                                         <div class="member-block-image-wrap">
-                                            <img src="images/members/successful-asian-lady-boss-red-blazer-holding-clipboard-with-documens-pen-working-looking-happy-white-background.jpg" class="member-block-image img-fluid" alt="">
+                                            <img src="images/servicos/Gestão de redes.jpg" class="rounded-4 w-100 object-fit-cover" alt="Gestão de redes" style="max-width: 400px; max-height: 200px;">
 
                                             <h2>Gestão de Redes Sociais</h2>
                                             <p>Criamos estratégias personalizadas para cada plataforma, produzimos conteúdos envolventes e gerimos as suas contas para aumentar o envolvimento, seguidores e visibilidade da sua marca.</p>
@@ -221,11 +221,10 @@ https://templatemo.com/tm-587-tiya-golf-club
                                     </div>
                                 </div>
 
-                                <div class="col-md-5">
+                                <div class="col-md-5 m-3">
                                     <div class="member-block">
                                         <div class="member-block-image-wrap">
-                                            <img src="images/members/successful-asian-lady-boss-red-blazer-holding-clipboard-with-documens-pen-working-looking-happy-white-background.jpg" class="member-block-image img-fluid" alt="">
-
+                                            <img src="images/servicos/Marketing de conteudos.jpg" class="rounded-4 w-100 object-fit-cover" alt="" style="max-width: 400px; max-height: 200px;">
                                             
                                             <h2>Marketing de Conteúdos</h2>
                                             <p>Desenvolvemos blogs, artigos, e-books, newsletters e outros materiais que atraem e fidelizam clientes, posicionando a sua empresa comoreferência no mercado.</p>
@@ -233,10 +232,10 @@ https://templatemo.com/tm-587-tiya-golf-club
                                     </div>
                                 </div>
 
-                                <div class="col-md-5">
+                                <div class="col-md-5 m-3">
                                     <div class="member-block">
                                         <div class="member-block-image-wrap">
-                                            <img src="images/members/successful-asian-lady-boss-red-blazer-holding-clipboard-with-documens-pen-working-looking-happy-white-background.jpg" class="member-block-image img-fluid" alt="">
+                                            <img src="images/servicos/criação de identidade visual.jpg" class="rounded-4 w-100 object-fit-cover" alt="" style="max-width: 400px; max-height: 200px;">
 
                                             <h2>Criação de Identidade Visual</h2>
                                             <p>A primeira impressão é crucial.
@@ -521,6 +520,86 @@ https://templatemo.com/tm-587-tiya-golf-club
                             </div>
                         </div>
 
+                    </div>
+                </div>
+            </section>
+
+            <section class="membership-section section-padding" id="section_3">
+                <div class="row p-5">
+                    <div class="col-6">
+                        <!-- Carousel wrapper -->
+                        <div id="carousel" data-mdb-carousel-init class="carousel slide text-center carousel-dark" data-mdb-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img class="rounded-circle shadow-1-strong mb-4"
+                                    src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(10).webp" alt="avatar"
+                                    style="width: 150px;" />
+                                        <div class="row d-flex justify-content-center">
+                                            <div class="col-lg-8">
+                                                <h5 class="mb-3">Maria Kate</h5>
+                                                <p>Photographer</p>
+                                                <p class="text-muted">
+                                                <i class="fas fa-quote-left pe-2"></i>
+                                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus et deleniti
+                                                nesciunt sint eligendi reprehenderit reiciendis, quibusdam illo, beatae quia
+                                                fugit consequatur laudantium velit magnam error. Consectetur distinctio fugit
+                                                doloremque.
+                                                    </p>
+                                            </div>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="rounded-circle shadow-1-strong mb-4"
+                                    src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(32).webp" alt="avatar"
+                                    style="width: 150px;" />
+                                    <div class="row d-flex justify-content-center">
+                                    <div class="col-lg-8">
+                                        <h5 class="mb-3">John Doe</h5>
+                                        <p>Web Developer</p>
+                                        <p class="text-muted">
+                                        <i class="fas fa-quote-left pe-2"></i>
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus et deleniti
+                                        nesciunt sint eligendi reprehenderit reiciendis.
+                                        </p>
+                                    </div>
+                                    </div>
+                                    </ul>
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="rounded-circle shadow-1-strong mb-4"
+                                    src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(1).webp" alt="avatar" style="width: 150px;" />
+                                    <div class="row d-flex justify-content-center">
+                                    <div class="col-lg-8">
+                                        <h5 class="mb-3">Anna Deynah</h5>
+                                        <p>UX Designer</p>
+                                        <p class="text-muted">
+                                        <i class="fas fa-quote-left pe-2"></i>
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus et deleniti
+                                        nesciunt sint eligendi reprehenderit reiciendis, quibusdam illo, beatae quia
+                                        fugit consequatur laudantium velit magnam error. Consectetur distinctio fugit
+                                        doloremque.
+                                        </p>
+                                    </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Carousel wrapper -->
+                    <div class="col-4 p-3 bg-body-tertiary rounded-2 border-2">
+                        <h2>Testemunhos</h2>
+
+                        <p>O que é que os nossos clientes pensam sobre nós?</p>
                     </div>
                 </div>
             </section>
