--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                                         <div class="col-4">
                                             <img class="rounded-circle shadow-1-strong mb-4 object-fit-cover"
                                                 src="/images/equipa/Laura Monteiro.jpg" alt="avatar"
-                                                style="max-height: 200px;"/>
+                                                style="max-height: 200px; width: 180px;"/>
                                             <div class="row d-flex justify-content-center">
                                                 <div class="col-lg-8">
                                                     <h5 class="mb-3">Diretora de Relações Públicas</h5>
@@ -828,7 +828,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                                         <div class="col-4">
                                             <img class="rounded-circle shadow-1-strong mb-4 object-fit-cover"
                                                 src="/images/equipa/Carlos Almeida.jpg" alt="avatar"
-                                                style="max-height: 200px;"/>
+                                                style="max-height: 200px; width: 180px;"/>
                                             <div class="row d-flex justify-content-center">
                                                 <div class="col-lg-8">
                                                     <h5 class="mb-3">Gerente de Contas</h5>
@@ -853,7 +853,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                                         <div class="col-4">
                                             <img class="rounded-circle shadow-1-strong mb-4 object-fit-cover"
                                                 src="/images/equipa/Ana Ribeiro.jpg" alt="avatar"
-                                                style="max-height: 200px;"/>
+                                                style="max-height: 200px; width: 180px;"/>
                                             <div class="row d-flex justify-content-center">
                                                 <div class="col-lg-8">
                                                     <h5 class="mb-3">Coordenadora de Comunicação</h5>
@@ -882,7 +882,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                                         <div class="col-4">
                                             <img class="rounded-circle shadow-1-strong mb-4 object-fit-cover"
                                                 src="/images/equipa/Miguel Santos.jpg" alt="avatar"
-                                                style="max-height: 200px;"/>
+                                                style="max-height: 200px; width: 180px"/>
                                             <div class="row d-flex justify-content-center">
                                                 <div class="col-lg-8">
                                                     <h5 class="mb-3">Especialista em Mídias Sociais</h5>
@@ -907,7 +907,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                                         <div class="col-4">
                                             <img class="rounded-circle shadow-1-strong mb-4 object-fit-cover"
                                                 src="/images/equipa/Mariana Costa.jpg" alt="avatar"
-                                                style="max-height: 200px;"/>
+                                                style="max-height: 200px; width: 180px"/>
                                             <div class="row d-flex justify-content-center">
                                                 <div class="col-lg-8">
                                                     <h5 class="mb-3">Assessora de Imprensa</h5>
@@ -932,7 +932,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                                         <div class="col-4">
                                             <img class="rounded-circle shadow-1-strong mb-4 object-fit-cover"
                                                 src="/images/equipa/Pedro Oliveira.jpg" alt="avatar"
-                                                style="max-height: 200px;"/>
+                                                style="max-height: 200px; width: 180px"/>
                                             <div class="row d-flex justify-content-center">
                                                 <div class="col-lg-8">
                                                     <h5 class="mb-3">Analista de Comunicação</h5>
@@ -961,7 +961,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                                         <div class="col-4">
                                             <img class="rounded-circle shadow-1-strong mb-4 object-fit-cover"
                                                 src="/images/equipa/Sofia Ferreira..jpg" alt="avatar"
-                                                style="max-height: 200px;"/>
+                                                style="max-height: 200px; width: 180px"/>
                                             <div class="row d-flex justify-content-center">
                                                 <div class="col-lg-8">
                                                     <h5 class="mb-3">Designer Gráfica</h5>
@@ -986,7 +986,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                                         <div class="col-4">
                                             <img class="rounded-circle shadow-1-strong mb-4 object-fit-cover"
                                                 src="/images/equipa/Rafael Nogueira.jpg" alt="avatar"
-                                                style="max-height: 200px;"/>
+                                                style="max-height: 200px; width: 180px"/>
                                             <div class="row d-flex justify-content-center">
                                                 <div class="col-lg-8">
                                                     <h5 class="mb-3">Estrategista de Marketing Digital</h5>
@@ -1011,7 +1011,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                                         <div class="col-4">
                                             <img class="rounded-circle shadow-1-strong mb-4 object-fit-cover"
                                                 src="/images/equipa/Beatriz Mendes.jpg" alt="avatar"
-                                                style="max-height: 200px;"/>
+                                                style="max-height: 200px; width: 180px"/>
                                             <div class="row d-flex justify-content-center">
                                                 <div class="col-lg-8">
                                                     <h5 class="mb-3">Redatora</h5>
