--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                         <div id="carousel" data-mdb-carousel-init class="carousel slide text-center carousel-dark" data-mdb-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <div class="row mb-5">
+                                    <div class="row mb-5 justify-content-center">
 
                                         <div class="col-4">
                                             <img class="rounded-circle shadow-1-strong mb-4 object-fit-cover"
@@ -879,7 +879,7 @@ https://templatemo.com/tm-587-tiya-golf-club
 
                                 <div class="carousel-item">
                                     <div class="row mb-5">
-                                        <div class="col-4">
+                                        <div class="col-3">
                                             <img class="rounded-circle shadow-1-strong mb-4 object-fit-cover"
                                                 src="/images/equipa/Miguel Santos.jpg" alt="avatar"
                                                 style="max-height: 200px; width: 180px"/>
@@ -904,7 +904,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                                             </div>
                                         </div>
                                         
-                                        <div class="col-4">
+                                        <div class="col-3">
                                             <img class="rounded-circle shadow-1-strong mb-4 object-fit-cover"
                                                 src="/images/equipa/Mariana Costa.jpg" alt="avatar"
                                                 style="max-height: 200px; width: 180px"/>
@@ -929,7 +929,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                                             </div>
                                         </div>
 
-                                        <div class="col-4">
+                                        <div class="col-3">
                                             <img class="rounded-circle shadow-1-strong mb-4 object-fit-cover"
                                                 src="/images/equipa/Pedro Oliveira.jpg" alt="avatar"
                                                 style="max-height: 200px; width: 180px"/>
@@ -958,7 +958,7 @@ https://templatemo.com/tm-587-tiya-golf-club
 
                                 <div class="carousel-item">
                                     <div class="row mb-5">
-                                        <div class="col-4">
+                                        <div class="col-3">
                                             <img class="rounded-circle shadow-1-strong mb-4 object-fit-cover"
                                                 src="/images/equipa/Sofia Ferreira..jpg" alt="avatar"
                                                 style="max-height: 200px; width: 180px"/>
@@ -983,7 +983,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                                             </div>
                                         </div>
                                         
-                                        <div class="col-4">
+                                        <div class="col-3">
                                             <img class="rounded-circle shadow-1-strong mb-4 object-fit-cover"
                                                 src="/images/equipa/Rafael Nogueira.jpg" alt="avatar"
                                                 style="max-height: 200px; width: 180px"/>
@@ -1008,7 +1008,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                                             </div>
                                         </div>
 
-                                        <div class="col-4">
+                                        <div class="col-3">
                                             <img class="rounded-circle shadow-1-strong mb-4 object-fit-cover"
                                                 src="/images/equipa/Beatriz Mendes.jpg" alt="avatar"
                                                 style="max-height: 200px; width: 180px"/>
